# signal-kit

./: .gitconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .release-plz.toml  .yamlfmt.yml  Cargo.toml  README.md  SECURITY.md  commitlint.config.js  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release-plz.yml  release-supply-chain.yml  supply-chain.yml
crates/otel-init/: Cargo.toml
crates/otel-init/src/: lib.rs  logs.rs  metrics.rs  observability.rs  traces.rs
crates/otel-init/src/file_logging/: config.rs  mod.rs  rotation.rs
crates/otel-init/src/metrics/: http_metric_layer.rs  process_metrics.rs
crates/otel-init/src/metrics/http_metrics/: README.md  http_server.rs
crates/otel-init/src/metrics/system_metrics/: disk.rs  general.rs  memory.rs  process.rs  processor.rs
crates/otel-init/src/traces/: otel_resource_attributes.rs
crates/otel-init/tests/: file_logging_integration.rs
crates/signal-kit/: CHANGELOG.md  Cargo.toml
crates/signal-kit/src/: README.md  lib.rs  observability.rs
crates/signal-kit/src/file_logging/: config.rs  mod.rs
crates/signal-kit/src/metrics/: http_metrics.rs  system_metrics.rs
crates/signal-kit/src/metrics/system_metrics/: network.rs
crates/signal-kit/src/traces/: json_or_not.rs
crates/signal-kit/tests/: file_logging_integration.rs
docs/: MAINTAINERS.md  SKIP_PATH_PROBE.md
scripts/: binary-targets.sh  check-publish-policy.sh  fetch-cyclonedx-cli.sh  gate-eval.sh  lib.sh  release-artifacts.sh  sbom-generate.sh  sbom-validate.sh  selftest.sh  verify-release-identity.sh
